Add unique index to shared link name

--- a/lib/plausible_web/templates/site/edit_shared_link.html.eex
+++ b/lib/plausible_web/templates/site/edit_shared_link.html.eex
@@ -8,5 +8,5 @@
     </div>
   </div>
 
-  <%= submit "Edit shared link", class: "button mt-4 w-full" %>
+  <%= submit "Update", class: "button mt-4 w-full" %>
 <% end %>
