--- a/lib/plausible_web/templates/email/yearly_expiration_notification.html.eex
+++ b/lib/plausible_web/templates/email/yearly_expiration_notification.html.eex
@@ -8,6 +8,7 @@ If you don't want to continue your subscription, there's no action required. You
 <br /><br />
 Have a question, feedback or need some guidance? Just reply to this email to get in touch!
 <br /><br />
-<br /><br />
-Thanks for being a Plausible Analytics subscriber!<br />
+Thanks,<br />
+Uku and Marko<br />
+--<br />
 <%= plausible_url() %><br />
