--- a/lib/plausible_web/templates/email/trial_upgrade_email.html.eex
+++ b/lib/plausible_web/templates/email/trial_upgrade_email.html.eex
@@ -15,8 +15,8 @@ Have a question, feedback or need some guidance? Just reply to this email to get
 This is more than our standard plans, so please reply back to this email to get a quote for your volume.
 <% end %>
 <br /><br />
-<br /><br />
 Thanks,<br />
-Uku Taht<br />
+Uku and Marko<br />
+--<br />
 <%= plausible_url() %><br />
 {{{ pm:unsubscribe }}}
