--- a/lib/plausible_web/templates/email/yearly_renewal_notification.html.eex
+++ b/lib/plausible_web/templates/email/yearly_renewal_notification.html.eex
@@ -6,8 +6,9 @@ There's no action required if you're happy to continue using Plausible to count 
 <br /><br />
 If you don't want to continue your subscription, you can cancel it on your <%= link("account settings page", to: "#{plausible_url()}/billing/upgrade") %>.
 <br /><br />
-Have a question, feedback or need some guidance? Just reply to this email to get in touch!
+Have a question, feedback or need some guidance? Do reply back to this email.
 <br /><br />
-<br /><br />
-Thanks for being a Plausible Analytics subscriber!<br />
+Thanks,<br />
+Uku and Marko<br />
+--<br />
 <%= plausible_url() %><br />
