--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -11,6 +11,10 @@
   @apply inline-flex justify-center px-4 py-2 text-sm font-medium text-white bg-indigo-600 border border-transparent rounded-md leading-5 transition hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500;
 }
 
+.button[disabled] {
+  @apply bg-gray-400 dark:bg-gray-600
+}
+
 .button-outline {
   @apply text-indigo-600 bg-transparent border border-indigo-600;
 }
