Pagination for sites listing (#994)
* Add simple pagination to sites index page

* Add changelog entry

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -304,3 +304,7 @@ blockquote {
 iframe[hidden] {
   display: none;
 }
+
+.pagination-link[disabled] {
+  @apply cursor-default bg-gray-100 pointer-events-none;
+}
