--- a/lib/plausible_web/templates/site/index.html.eex
+++ b/lib/plausible_web/templates/site/index.html.eex
@@ -37,4 +37,25 @@
       </div>
     <% end %>
   </ul>
+
+  <%= if @pagination.total_pages > 1 do %>
+    <%= pagination @conn, @pagination, [current_class: "is-current"], fn p -> %>
+      <nav class="px-4 py-3 flex items-center justify-between border-t border-gray-200 sm:px-6" aria-label="Pagination">
+        <div class="hidden sm:block">
+          <p class="text-sm text-gray-700">
+          Showing page
+          <span class="font-medium"><%= @pagination.page %></span>
+          of
+          <span class="font-medium"><%= @pagination.total_pages %></span>
+          total
+          </p>
+        </div>
+        <div class="flex-1 flex justify-between sm:justify-end">
+          <%= pagination_link(p, :previous, label: "← Previous", class: "pagination-link relative inline-flex items-center px-4 py-2 border border-gray-300 text-sm font-medium rounded-md text-gray-700 bg-white hover:bg-gray-50", force_show: true) %>
+          <%= pagination_link(p, :next, label: "Next →", class: "pagination-link ml-3 relative inline-flex items-center px-4 py-2 border border-gray-300 text-sm font-medium rounded-md text-gray-700 bg-white hover:bg-gray-50", force_show: true) %>
+        </div>
+      </nav>
+    <% end %>
+  <% end %>
+
 </div>
