--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -7,6 +7,8 @@
 @import "tooltip.css";
 @import "flatpickr.css";
 
+[x-cloak] { display: none; }
+
 .button {
   @apply inline-flex justify-center px-4 py-2 text-sm font-medium text-white bg-indigo-600 border border-transparent rounded-md leading-5 transition hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500;
 }
