--- a/lib/plausible_web/templates/billing/upgrade.html.eex
+++ b/lib/plausible_web/templates/billing/upgrade.html.eex
@@ -1,16 +1,13 @@
+<script type="text/javascript"  src="https://cdnjs.cloudflare.com/ajax/libs/fetch-jsonp/1.1.3/fetch-jsonp.min.js"></script>
 <script>
-  window.plans = function() {
+  plans = function() {
     return {
       rawPlans: <%= raw Jason.encode!(Plausible.Billing.Plans.plans_for(@user)) %>,
+      localizedPlans: null,
       volume: '10k',
       billingCycle: 'monthly',
       selectedPlanPrice() {
-        var selectedPlan = this.rawPlans.find((plan) => plan.volume === this.volume)
-        if (this.billingCycle === 'monthly'){
-          return selectedPlan.monthly_cost
-        } else {
-          return selectedPlan.yearly_cost
-        }
+        return this.priceFor(this.selectedPlanProductId())
       },
       selectedPlanProductId() {
         var selectedPlan = this.rawPlans.find((plan) => plan.volume === this.volume)
@@ -19,6 +16,31 @@
         } else {
           return selectedPlan.yearly_product_id
         }
+      },
+      priceFor(productId) {
+        var plan = this.localizedPlans.find(plan => plan.product_id === Number(productId))
+        var currency = {
+          'USD': '$',
+          'EUR': '€',
+          'GBP': '£'
+        }[plan.currency]
+
+        return currency + plan.price.gross
+      },
+      fetchPlans() {
+        var rawPlans = <%= raw Jason.encode!(Plausible.Billing.Plans.plans_for(@user)) %>
+        var productIds = []
+
+        rawPlans.forEach((plan) => {
+          productIds.push(plan.monthly_product_id)
+          productIds.push(plan.yearly_product_id)
+        })
+
+        fetchJsonp('https://checkout.paddle.com/api/2.0/prices?product_ids=' + productIds.join(','))
+          .then((res) => res.json())
+          .then((data) => {
+            this.localizedPlans = data.response.products
+          })
       }
     }
   }
@@ -30,7 +52,7 @@
 
 <div>
   <div class="flex flex-col w-full max-w-4xl px-4 mx-auto mt-4 md:flex-row">
-    <div x-data="window.plans()" class="flex-1 px-8 py-4 mt-8 mb-4 bg-white rounded shadow-md dark:bg-gray-800">
+    <div x-init="fetchPlans()" x-data="window.plans()" class="flex-1 px-8 py-4 mt-8 mb-4 bg-white rounded shadow-md dark:bg-gray-800">
       <div class="w-full py-4 dark:text-gray-100">
         <span>You've used <b><%= PlausibleWeb.AuthView.delimit_integer(@usage) %></b> billable pageviews in the last 30 days</span>
       </div>
@@ -48,7 +70,7 @@
 
       <div class="pt-6"></div>
 
-      <div class="flex flex-col">
+      <template x-if="localizedPlans" class="flex flex-col">
         <div class="py-2 -my-2 overflow-x-auto sm:-mx-6 sm:px-6 lg:-mx-8 lg:px-8">
           <div class="inline-block min-w-full overflow-hidden align-middle border-b border-gray-200 shadow sm:rounded-lg dark:border-t dark:border-l dark:border-r dark:shadow-none">
             <table class="min-w-full">
@@ -64,16 +86,18 @@
               </thead>
               <tbody class="bg-white dark:bg-gray-800">
                 <%= for plan <- Plausible.Billing.Plans.plans_for(@user) do %>
-                  <%= render("_plan_option.html", volume: PlausibleWeb.StatsView.large_number_format(plan[:limit]), monthly_price: plan[:monthly_cost], yearly_price: plan[:yearly_cost]) %>
+                  <%= render("_plan_option.html", plan: plan) %>
                 <% end %>
               </tbody>
             </table>
           </div>
         </div>
-      </div>
+      </template>
+
+      <div x-show="!localizedPlans" class="mx-auto my-56 loading sm"><div></div></div>
 
       <div class="mt-6 text-right">
-        <div class="text-sm font-medium dark:text-gray-100">Due today: <b x-text="selectedPlanPrice()">$6</b></div>
+        <div class="text-sm font-medium dark:text-gray-100">Due today: <template x-if="localizedPlans"><b x-text="selectedPlanPrice()">$6</b></template></div>
         <div class="mb-4 text-xs font-medium dark:text-gray-100">+ VAT if applicable</div>
         <span class="inline-flex rounded-md shadow-sm">
           <button type="button" data-theme="none" :data-product="selectedPlanProductId()" data-email="<%= @conn.assigns[:current_user].email %>" data-disable-logout="true" data-passthrough="<%= @conn.assigns[:current_user].id %>" data-success="/billing/upgrade-success" class="inline-flex items-center px-4 py-2 text-sm font-medium text-white bg-indigo-600 border border-transparent paddle_button leading-5 rounded-md hover:bg-indigo-500 focus:outline-none focus:border-indigo-700 focus:ring active:bg-indigo-700 transition ease-in-out duration-150">
